js/css for play/pause button, and contrast fixes for links in tables

--- a/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/base/_variables.scss
@@ -85,6 +85,7 @@ $color-link: $black;
 $color-social-bg: $pink-red;
 $color-venue-bg: $pink-red;
 $color-video-dark-blue: #002A48;
+$color-table-link-focus: #d82d1a;
 
 // ==================================================
 // Typography
