--- a/docroot/sites/all/themes/ilr_theme/scss/components/_people_profile.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_people_profile.scss
@@ -14,8 +14,13 @@ article.node-people-profile {
 
     .field-type-email {
       a {
-        color: blue;
+        color: $cornell-red;
+        border: 1px dotted;
       }
+    }
+    a {
+      color: $cornell-red;
+      border: 1px dotted;
     }
   }
 
@@ -77,7 +82,6 @@ article.node-people-profile {
 
     padding: 1rem;
 
-
     .field-label { // Sidebar headings
       margin-bottom: .5em;
       @include leader(2);
@@ -89,6 +93,13 @@ article.node-people-profile {
     .group-contact-info {
       @include framed($color: #222, $width: 10px, $top: true, $right: true, $bottom: false, $left: false);
       padding: 1rem 1rem 0 0;
+      a {
+        border-bottom: 1px dotted;
+        &:hover, &:focus {
+          color: $color-table-link-focus;
+          border-bottom: 1px solid transparent;
+        }
+      }
     }
 
     .field-name-field-areas-of-expertise {
@@ -108,6 +119,13 @@ article.node-people-profile {
     .field-name-field-ai-links {
       ul {
         @include bulleted-list;
+
+        a {
+          &:hover, &:focus {
+          color: $color-table-link-focus;
+          border-bottom: 1px solid transparent;
+        }
+        }
       }
     }
   }
