--- a/docroot/sites/all/themes/ilr_theme/scss/components/_social.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_social.scss
@@ -76,7 +76,7 @@ ul.social {
       border:none;
       border-radius: 0;
       padding-top: 0;
-      color: $brand-light;
+      color: $gray-extra;
       &.mail,
       &.twitter,
       &.youtube,
