--- a/docroot/sites/all/themes/ilr_theme/scss/components/_tables.scss
+++ b/docroot/sites/all/themes/ilr_theme/scss/components/_tables.scss
@@ -43,6 +43,8 @@ table {
 
         &:hover, &:focus {
           border-bottom: 1px solid transparent;
+          color: $color-table-link-focus;
+
         }
       }
     }
